<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddComponentActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/Add"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Switch
        android:id="@+id/AcidBaseSwInp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/AcidUpp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/BaseUpp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/ManBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Manual"
        app:layout_constraintEnd_toStartOf="@+id/AutoBtn"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@id/textView13" />

    <Button
        android:id="@+id/AutoBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Auto"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/ManBtn"
        app:layout_constraintTop_toBottomOf="@id/textView13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/ManBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputA"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <!--android:visibility="gone" /-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/til1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cuTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputB"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <!--android:visibility="gone" /-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/til2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cnTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputC"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <!--android:visibility="gone" /-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/til3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/VTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputD"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <!--android:visibility="gone" /-->

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SaveBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Save"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/til4" />

    <!--android:visibility="gone" /-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/KTxtIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/NextBtn"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/SaveBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/KTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:imeOptions="actionGo"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="textEnd"
            android:textSize="16sp" />
        <!--android:visibility="gone" /-->

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/NextBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="@string/Next"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/SaveBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>